--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
