--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
